@@ -82,8 +82,8 @@ jobs:
             #pyinstaller --windowed --hidden-import='PIL._tkinter_finder' --onefile windows_install.py -n install_shortcut
           else
             pyinstaller -i icon.ico --hidden-import='PIL._tkinter_finder' run.py -n friendly_gt
-            #cd windows
-            #pyinstaller --hidden-import='PIL._tkinter_finder' --onefile windows_install.py -n install_shortcut
+            cd windows
+            pyinstaller --hidden-import='PIL._tkinter_finder' --onefile windows_install.py -n friendly_gt-installer
           fi
         shell: bash 
         
@@ -117,7 +117,7 @@ jobs:
         run: |
            #New-Item -path "." -name "windows_app" -ItemType "directory"
            #Copy-Item  "dist\friendly_gt.exe" -Destination "windows_app\friendly_gt.exe" #cp ./dist/friendly_gt.exe ./windows
-           #Copy-Item "windows\dist\install_shortcut.exe" -Destination "windows_app\install_shortcut.exe"
+           Copy-Item "windows\dist\friendly_gt-installer.exe" -Destination "dist\install_shortcut.exe"
            Compress-Archive -path ".\dist" -DestinationPath ".\friendly_gt-windows.zip"
         shell: powershell
         # Bundle and upload the macos app folder
