@@ -7,7 +7,8 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 
 ## [v0.7.4] - 2020-05-07
 ### Changed
--Remove matplotlib dependency
+- Remove matplotlib dependency
+- Windows installer
 
 ## [v0.7.3] - 2020-05-07
 ### Added 
